# gen-ai-challenge-codebasics

./: README.md  pyproject.toml  requirements.txt  setup.py
config/: config.yml
exeception/: exception.py
notebook/: checking.ipynb
prompt_library/: prompt.py
