[project]
name = "rag-role-assistant"
version = "0.1.0"
description = "RAG-based Assistant to Deliver Role-Specific Insights Across Departments in a Fintech Company"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "ds-rpc-01", email = "thangamani1128@gmail.com" }
]
dependencies = [
    "langchain_astradb",
    "pandas",
    "langchain_google_genai",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "python-dotenv",
    "langchain",
    "langchain_core",
    "langchain-openai",
    "langchain_community",
    "streamlit"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv", "tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
